HTML & CSS REFRESH

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
     <title>Viktor M Jozsa</title>
     <link rel="icon" type="image/png" href="image/favicon.png">
+
     <link rel="stylesheet" href="css/meyer-reset.css">
 
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="css/style.css">
-
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/components.css">
 </head>
 <body>
     <div class="grid-container">
@@ -34,43 +36,41 @@
     </div>
 
     <div class="main">
-      <h2>Student works</h2>
-      <div class="student-countainer">
-        <a class="student-item one-student" href="https://viktormihalyjozsa.github.io/git-basics-project/" title="Github - git basics project" class="social-icon" target="_blank">
-          Basics Project</a>
-        <a class="student-item two-student" href="https://viktormihalyjozsa.github.io/responsive-blog-site/" title="Github - responsive blog site" class="social-icon" target="_blank">
-          Responsive Blog Site</a>
-        <a class="student-item three-student" href="https://viktormihalyjozsa.github.io/online-name-card/" title="Github - website layout" class="social-icon" target="_blank">
-          Online Name Card</a>
-        <a class="student-item four-student" href="https://viktormihalyjozsa.github.io/wedding-website/" title="Github - wedding website" class="social-icon" target="_blank">
-          Wedding Website</a>
-        <a class="student-item five-student" href="https://viktormihalyjozsa.github.io/javascript-color-clock/" title="Github - javascript color clock" class="social-icon" target="_blank">
-          JS Color Clock</a>
-        <a class="student-item six-student" href="https://viktormihalyjozsa.github.io/course-js-minesweeper/" title="Github - course js minesweeper" class="social-icon" target="_blank">
-          Course JS MinesWeeper</a>
-      </div>
-      <br>
-      <h2>Junior my works</h2>
-      <div class="work-countainer">
-        <a class="work-item one-work" href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - easter egg finder" class="social-icon" target="_blank">
-          Easter Egg Finder</a>
-        <a class="work-item two-work" href="#" title="Viktor M Jozsa" target="_blank">
-          V M J</a>
-        <a class="work-item three-work" href="https://viktormihalyjozsa.github.io/main-wedding-website/" title="Github" target="_blank">
-          Main Wedding Website</a>
-      </div>
+        <h2>Student works</h2>
+        <div class="student-countainer">
+            <a class="student-item one-student" href="https://viktormihalyjozsa.github.io/git-basics-project/" title="Github - git basics project" class="social-icon" target="_blank">
+            Basics Project</a>
+            <a class="student-item two-student" href="https://viktormihalyjozsa.github.io/responsive-blog-site/" title="Github - responsive blog site" class="social-icon" target="_blank">
+            Responsive Blog Site</a>
+            <a class="student-item three-student" href="https://viktormihalyjozsa.github.io/online-name-card/" title="Github - website layout" class="social-icon" target="_blank">
+            Online Name Card</a>
+            <a class="student-item four-student" href="https://viktormihalyjozsa.github.io/wedding-website/" title="Github - wedding website" class="social-icon" target="_blank">
+            Wedding Website</a>
+            <a class="student-item five-student" href="https://viktormihalyjozsa.github.io/javascript-color-clock/" title="Github - javascript color clock" class="social-icon" target="_blank">
+            JS Color Clock</a>
+            <a class="student-item six-student" href="https://viktormihalyjozsa.github.io/course-js-minesweeper/" title="Github - course js minesweeper" class="social-icon" target="_blank">
+            Course JS MinesWeeper</a>
+        </div>
+          <br>
+        <h2>Junior my works</h2>
+        <div class="work-countainer">
+            <a class="work-item one-work" href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - easter egg finder" class="social-icon" target="_blank">
+            Easter Egg Finder</a>
+            <a class="work-item two-work" href="#" title="Viktor M Jozsa" target="_blank">
+            V M J</a>
+            <a class="work-item three-work" href="https://viktormihalyjozsa.github.io/main-wedding-website/" title="Github" target="_blank">
+            Main Wedding Website</a>
+        </div>
     </div>
 
     <div class="footer">
-      <section>
-            <ul>
-              <li><span>Contact:</span></li>
-              <li><a href="https://www.facebook.com/viktor.jozsa.50/" title="Facebook" class="social-icon" target="_blank">
+        <ul>
+            <li><span>Contact:</span></li>
+            <li><a href="https://www.facebook.com/viktor.jozsa.50/" title="Facebook" class="social-icon" target="_blank">
                 <i class="fa fa-2x fa-facebook" aria-hidden="true"></i></a></li>
-              <li><a href="mailto:viktor.mihaly.jozsa@gmail.com" title="Google" class="social-icon" target="_blank">
+            <li><a href="mailto:viktor.mihaly.jozsa@gmail.com" title="Google" class="social-icon" target="_blank">
                 <i class="fa fa-2x fa-google" aria-hidden="true"></i></a></li>
-            </ul>
-      </section>
+        </ul>
     </div>
     
     </div>
