--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <a class="student-item four-student" href="https://viktormihalyjozsa.github.io/wedding-website/" title="Github - wedding website" class="social-icon" target="_blank">
             Wedding Website</a>
             <a class="student-item five-student" href="https://viktormihalyjozsa.github.io/javascript-color-clock/" title="Github - javascript color clock" class="social-icon" target="_blank">
-            JS Color Clock</a>
+            Color Clock ~ JavaScript</a>
             <a class="student-item six-student" href="https://viktormihalyjozsa.github.io/course-js-minesweeper/" title="Github - course js minesweeper" class="social-icon" target="_blank">
-            Course JS MinesWeeper</a>
+            Mines Weeper ~ JavaScript Course</a>
         </div>
           <br>
         <h2>Junior my works</h2>
