--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Viktor M Jozsa</title>
     <link rel="icon" type="image/png" href="image/favicon.png">
 
-    <link rel="stylesheet" href="css/meyer-reset.css">
+    <link rel="stylesheet" type="text/css" href="css/meyer-reset.css">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" type="text/css" href="css/base.css">
+    <link rel="stylesheet" type="text/css" href="css/layout.css">
+    <link rel="stylesheet" type="text/css" href="css/components.css">
 </head>
 <body>
     <div class="grid-container">
