--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
     <div class="main">
         <h2>Student works</h2>
         <div class="student-countainer">
-            <a class="student-item one-student" href="https://viktormihalyjozsa.github.io/git-basics-project/" title="Github - git basics project" class="social-icon" target="_blank">
+            <a class="student-item one-student" href="https://viktormihalyjozsa.github.io/git-basics-project/" title="Github - git basics project" target="_blank">
             Basics Project</a>
-            <a class="student-item two-student" href="https://viktormihalyjozsa.github.io/responsive-blog-site/" title="Github - responsive blog site" class="social-icon" target="_blank">
+            <a class="student-item two-student" href="https://viktormihalyjozsa.github.io/responsive-blog-site/" title="Github - responsive blog site" target="_blank">
             Responsive Blog Site</a>
-            <a class="student-item three-student" href="https://viktormihalyjozsa.github.io/online-name-card/" title="Github - website layout" class="social-icon" target="_blank">
+            <a class="student-item three-student" href="https://viktormihalyjozsa.github.io/online-name-card/" title="Github - website layout" target="_blank">
             Online Name Card</a>
-            <a class="student-item four-student" href="https://viktormihalyjozsa.github.io/wedding-website/" title="Github - wedding website" class="social-icon" target="_blank">
+            <a class="student-item four-student" href="https://viktormihalyjozsa.github.io/wedding-website/" title="Github - wedding website" target="_blank">
             Wedding Website</a>
-            <a class="student-item five-student" href="https://viktormihalyjozsa.github.io/javascript-color-clock/" title="Github - javascript color clock" class="social-icon" target="_blank">
+            <a class="student-item five-student" href="https://viktormihalyjozsa.github.io/javascript-color-clock/" title="Github - javascript color clock" target="_blank">
             Color Clock ~ JavaScript</a>
-            <a class="student-item six-student" href="https://viktormihalyjozsa.github.io/course-js-minesweeper/" title="Github - course js minesweeper" class="social-icon" target="_blank">
+            <a class="student-item six-student" href="https://viktormihalyjozsa.github.io/course-js-minesweeper/" title="Github - course js minesweeper" target="_blank">
             Mines Weeper ~ JavaScript Course</a>
         </div>
           <br>
         <h2>Junior my works</h2>
         <div class="work-countainer">
-            <a class="work-item one-work" href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - easter egg finder" class="social-icon" target="_blank">
+            <a class="work-item one-work" href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - easter egg finder" target="_blank">
             Easter Egg Finder</a>
             <a class="work-item two-work" href="#" title="Viktor M Jozsa" target="_blank">
             V M J</a>
