Flex Countainer - Flex Item

--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
     <title>Viktor M Jozsa</title>
     <link rel="icon" type="image/png" href="image/favicon.png">
-
     <link rel="stylesheet" type="text/css" href="css/meyer-reset.css">
-
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/base.css">
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/components.css">
 </head>
 <body>
     <div class="grid-container">
-
     <div class="header">
         <div class="profile-image">
           <img src="image/Main.jpg" alt="Viktor M Jozsa">
@@ -27,52 +26,50 @@
           <p><i class="fa fa-map-marker"></i> Cegled, HU</p>
         </div>
         <div class="section">
-          <p>Many years ago I started working as a hobby with website editing and programming languages ​​and development, such as: html, css, javascript, php, CMS systems (Drupal, Joomla, Wordpress, PHP Nuke...).</p>
-            <br>
-            <p>I can be found and reached on Facebook, Gmail and GitHub by clicking on the links below.</p>
-            <br>
+            <p>Many years ago, I started working on a hobby level with website editing and programming languages and development, such as: html, css, javascript, php, CMS systems.</p>
+            <p>After a short hiatus, I made up my mind and continued to polish my knowledge and experience with professional help.</p>
+            <p>There was a very good opportunity for this at the :</p>
+            <a href="https://hu.codeberryschool.com/?referral_code=3GD4HJ" title="Code Berry School - Referral discount" target="_blank"><span>Code Berry School.</span></a>
+            <p>You can find and reach us on Facebook, Gmail and GitHub by clicking the links below.</p>
             <p>Have a nice day !</p>
-        </div>   
+        </div>
     </div>
-
     <div class="main">
-        <h2>Student works</h2>
         <div class="student-countainer">
-            <a class="student-item one-student" href="https://viktormihalyjozsa.github.io/git-basics-project/" title="Github - git basics project" target="_blank">
-            Basics Project</a>
-            <a class="student-item two-student" href="https://viktormihalyjozsa.github.io/responsive-blog-site/" title="Github - responsive blog site" target="_blank">
-            Responsive Blog Site</a>
-            <a class="student-item three-student" href="https://viktormihalyjozsa.github.io/online-name-card/" title="Github - website layout" target="_blank">
-            Online Name Card</a>
-            <a class="student-item four-student" href="https://viktormihalyjozsa.github.io/wedding-website/" title="Github - wedding website" target="_blank">
-            Wedding Website</a>
-            <a class="student-item five-student" href="https://viktormihalyjozsa.github.io/javascript-color-clock/" title="Github - javascript color clock" target="_blank">
-            Color Clock ~ JavaScript</a>
-            <a class="student-item six-student" href="https://viktormihalyjozsa.github.io/course-js-minesweeper/" title="Github - course js minesweeper" target="_blank">
-            Mines Weeper ~ JavaScript Course</a>
+            <h2>~ Student works</h2>
+            <a href="https://viktormihalyjozsa.github.io/git-basics-project/" title="Github - git basics project" target="_blank">
+            <span class="student-item one-student">Basics Project</span></a>
+            <a href="https://viktormihalyjozsa.github.io/responsive-blog-site/" title="Github - responsive blog site" target="_blank">
+            <span class="student-item two-student">Responsive Blog Site</span></a>
+            <a href="https://viktormihalyjozsa.github.io/online-name-card/" title="Github - website layout" target="_blank">
+            <span class="student-item three-student">Online Name Card</span></a>
+            <a href="https://viktormihalyjozsa.github.io/wedding-website/" title="Github - wedding website" target="_blank">
+            <span class="student-item four-student">Wedding Website</span></a>
+            <a href="https://viktormihalyjozsa.github.io/javascript-color-clock/" title="Github - javascript color clock" target="_blank">
+            <span class="student-item five-student">Color Clock ~ JavaScript</span></a>
+            <a href="https://viktormihalyjozsa.github.io/course-js-minesweeper/" title="Github - course js minesweeper" target="_blank">
+            <span class="student-item six-student">Mines Weeper ~ JS Course</span></a>
         </div>
-          <br>
-        <h2>Junior my works</h2>
+        <br>
         <div class="work-countainer">
-            <a class="work-item one-work" href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - easter egg finder" target="_blank">
-            Easter Egg Finder</a>
-            <a class="work-item two-work" href="#" title="Viktor M Jozsa" target="_blank">
-            V M J</a>
-            <a class="work-item three-work" href="https://viktormihalyjozsa.github.io/main-wedding-website/" title="Github" target="_blank">
-            Main Wedding Website</a>
+            <h2>Junior my works ~</h2>
+            <a href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - easter egg finder" target="_blank">
+                <span class="work-item one-work">Easter Egg Finder</span></a>
+            <a href="#" title="Viktor M Jozsa" target="_blank">
+                <span class="work-item two-work">V M J</span></a>
+            <a href="https://viktormihalyjozsa.github.io/main-wedding-website/" title="Github" target="_blank">
+                <span class="work-item three-work">Main Wedding Website</span></a>
         </div>
     </div>
-
     <div class="footer">
         <ul>
-            <li><span>Contact:</span></li>
+            <li><span class="contact">Contact :</span></li>
             <li><a href="https://www.facebook.com/viktor.jozsa.50/" title="Facebook" class="social-icon" target="_blank">
                 <i class="fa fa-2x fa-facebook" aria-hidden="true"></i></a></li>
             <li><a href="mailto:viktor.mihaly.jozsa@gmail.com" title="Google" class="social-icon" target="_blank">
                 <i class="fa fa-2x fa-google" aria-hidden="true"></i></a></li>
         </ul>
-    </div>
-    
+    </div> 
     </div>
 </body>
 </html>
