--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="section">
             <p>Many years ago, I started working on a hobby level with website editing and programming languages and development, such as: html, css, javascript, php, CMS systems.</p>
             <p>After a short hiatus, I made up my mind and continued to polish my knowledge and experience with professional help.</p>
-            <p>There was a very good opportunity for this at the :</p>
+            <p>There was a very good opportunity for this at the</p>
             <a href="https://hu.codeberryschool.com/?referral_code=3GD4HJ" title="Code Berry School - Referral discount" target="_blank"><span>Code Berry School.</span></a>
             <p>You can find and reach us on Facebook, Gmail and GitHub by clicking the links below.</p>
             <p>Have a nice day !</p>
