„Finished the assignment”

--- a/index.html
+++ b/index.html
@@ -38,27 +38,27 @@
         <div class="student-countainer">
             <h2>~ Student works</h2>
             <a href="https://viktormihalyjozsa.github.io/git-basics-project/" title="Github - git basics project" target="_blank">
-            <span class="student-item one-student">Basics Project</span></a>
+            <span class="student-item">Basics Project</span></a>
             <a href="https://viktormihalyjozsa.github.io/responsive-blog-site/" title="Github - responsive blog site" target="_blank">
-            <span class="student-item two-student">Responsive Blog Site</span></a>
+            <span class="student-item">Responsive Blog Site</span></a>
             <a href="https://viktormihalyjozsa.github.io/online-name-card/" title="Github - website layout" target="_blank">
-            <span class="student-item three-student">Online Name Card</span></a>
+            <span class="student-item">Online Name Card</span></a>
             <a href="https://viktormihalyjozsa.github.io/wedding-website/" title="Github - wedding website" target="_blank">
-            <span class="student-item four-student">Wedding Website</span></a>
+            <span class="student-item">Wedding Website</span></a>
             <a href="https://viktormihalyjozsa.github.io/javascript-color-clock/" title="Github - javascript color clock" target="_blank">
-            <span class="student-item five-student">Color Clock ~ JavaScript</span></a>
+            <span class="student-item">Color Clock ~ JavaScript</span></a>
             <a href="https://viktormihalyjozsa.github.io/course-js-minesweeper/" title="Github - course js minesweeper" target="_blank">
-            <span class="student-item six-student">Mines Weeper ~ JS Course</span></a>
+            <span class="student-item">Mines Weeper ~ JS Course</span></a>
         </div>
         <br>
         <div class="work-countainer">
             <h2>Junior my works ~</h2>
             <a href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - easter egg finder" target="_blank">
-                <span class="work-item one-work">Easter Egg Finder</span></a>
-            <a href="#" title="Viktor M Jozsa" target="_blank">
-                <span class="work-item two-work">V M J</span></a>
+                <span class="work-item">Easter Egg Finder</span></a>
+            <a href="https://viktormihalyjozsa.com" title="Viktor M Jozsa" target="_blank">
+                <span class="work-item">V M J</span></a>
             <a href="https://viktormihalyjozsa.github.io/main-wedding-website/" title="Github" target="_blank">
-                <span class="work-item three-work">Main Wedding Website</span></a>
+                <span class="work-item">Main Wedding Website</span></a>
         </div>
     </div>
     <div class="footer">
