INDEX.HTML + Blog Page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <div class="main">
         <div class="student-countainer">
-            <h2>~ Student works</h2>
+            <h2>~ Student Works</h2>
             <a href="https://viktormihalyjozsa.github.io/git-basics-project/" title="Github - git basics project" target="_blank">
             <span class="student-item">Basics Project</span></a>
             <a href="https://viktormihalyjozsa.github.io/responsive-blog-site/" title="Github - responsive blog site" target="_blank">
@@ -52,7 +52,13 @@
         </div>
         <br>
         <div class="work-countainer">
-            <h2>Junior my works ~</h2>
+            <h2>Junior Student Works ~</h2>
+            <a href="https://viktormihalyjozsa.github.io/Blog-Site/" title="Github - Blog Page" target="_blank">
+                <span class="work-item">Blog Page</span></a>
+        </div>
+        <br>
+        <div class="work-countainer">
+            <h2>Junior my Works ~</h2>
             <a href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - easter egg finder" target="_blank">
                 <span class="work-item">Easter Egg Finder</span></a>
             <a href="https://viktormihalyjozsa.com" title="Viktor M Jozsa" target="_blank">
