Plus Contact Site

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
             <h2>Junior Student Works ~</h2>
             <a href="https://viktormihalyjozsa.github.io/Blog-Site/" title="Github - Blog Page" target="_blank">
                 <span class="work-item">Blog Page</span></a>
+            <a href="https://viktormihalyjozsa.github.io/Contact-Page/" title="Github - Contact Page" target="_blank">
+                <span class="work-item">Contact Page</span></a>
         </div>
         <br>
         <div class="work-countainer">
