--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                 <span class="work-item">Blog Page</span></a>
             <a href="https://viktormihalyjozsa.github.io/Contact-Page/" title="Github - Contact Page" target="_blank">
                 <span class="work-item">Contact Page</span></a>
+            <a href="https://viktormihalyjozsa.github.io/Signup-Page/" title="Github - Signup Page" target="_blank">
+                <span class="work-item">Signup Page</span></a>
+            <a href="https://viktormihalyjozsa.github.io/Chat/" title="Github - Chat Interface" target="_blank">
+                <span class="work-item">Chat Interrface</span></a>
         </div>
         <br>
         <div class="work-countainer">
