Index Plus Web Site

--- a/index.html
+++ b/index.html
@@ -71,12 +71,14 @@
         <br>
         <div class="work-countainer">
             <h2>Junior my Works ~</h2>
-            <a href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - easter egg finder" target="_blank">
+            <a href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - Easter Egg Finder" target="_blank">
                 <span class="work-item">Easter Egg Finder</span></a>
             <a href="https://viktormihalyjozsa.com" title="Viktor M Jozsa" target="_blank">
                 <span class="work-item">V M J</span></a>
-            <a href="https://viktormihalyjozsa.github.io/main-wedding-website/" title="Github" target="_blank">
+            <a href="https://viktormihalyjozsa.github.io/main-wedding-website/" title="Github - Main Wedding Website" target="_blank">
                 <span class="work-item">Main Wedding Website</span></a>
+            <a href="https://viktormihalyjozsa.github.io/valentin-s-day-heart-finder/" title="Github - Valentine's Day Heart Finder" target="_blank">
+                <span class="work-item">Valentine's Day Heart Finder</span></a>
         </div>
     </div>
     <div class="footer">
