--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <a href="https://viktormihalyjozsa.github.io/main-wedding-website/" title="Github - Main Wedding Website" target="_blank">
                 <span class="work-item">Main Wedding Website</span></a>
             <a href="https://viktormihalyjozsa.github.io/valentin-s-day-heart-finder/" title="Github - Valentine's Day Heart Finder" target="_blank">
-                <span class="work-item">Valentine's Day Heart Finder</span></a>
+                <span class="work-item">Valentine's Day</span></a>
         </div>
     </div>
     <div class="footer">
