--- a/index.html
+++ b/index.html
@@ -28,15 +28,19 @@
         </div>
         <div class="section-headline">
           <h1>Viktor M Jozsa</h1>
-          <h2>Beginner web developer and programmer</h2>
+          <h2>Junior web developer and programmer</h2>
+          <br>
           <p><i class="fa fa-map-marker"></i> Cegled, HU</p>
         </div>
         <div class="section">
-            <p>Many years ago, I started working on a hobby level with website editing and programming languages and development, such as: html, css, javascript, php, CMS systems.</p>
-            <p>After a short hiatus, I made up my mind and continued to polish my knowledge and experience with professional help.</p>
-            <p>There was a very good opportunity for this at the</p>
-            <a href="https://hu.codeberryschool.com/?referral_code=3GD4HJ" title="Code Berry School - Referral discount" target="_blank"><span>Code Berry School.</span></a>
-            <p>You can find and reach us on Facebook, Gmail and GitHub by clicking the links below.</p>
+            <p>For a few years, as a secondary activity, I have been dealing with website editing, programming languages and program development, e.g.: html, css, javascript.</p>
+            <br>
+            <p>I have made up my mind and with professional help I am constantly honing my knowledge and professional experience. It was a very good opportunity at</p>
+                <a href="https://hu.codeberryschool.com/?referral_code=3GD4HJ" title="Code Berry School - Referral discount" target="_blank">
+                    <span>Code Berry School.</span></a>
+            <br><br>
+            <p>You can view some of my previous works in the other menu items. You can view it on Facebook and Gmail by clicking the links below.</p>
+            <br>
             <p>Have a nice day !</p>
         </div>
     </div>
