--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
                 <span class="work-item">Main Wedding Website</span></a>
             <a href="https://viktormihalyjozsa.github.io/valentin-s-day-heart-finder/" title="Github - Valentine's Day Heart Finder" target="_blank">
                 <span class="work-item">Valentine's Day</span></a>
+            <a href="https://viktormihalyjozsa.github.io/valentin-s-day-puzzle/" title="Github - Valentine's Day Puzzle" target="_blank">
+                <span class="work-item">Valentine's Day Puzzle</span></a>
         </div>
     </div>
     <div class="footer">
