--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
+
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width initial-scale=1">
+
     <title>Viktor M Jozsa</title>
+
     <link rel="icon" type="image/png" href="image/favicon.png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" 
           integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" 
           crossorigin="anonymous" referrerpolicy="no-referrer">
+
+    <meta name="viewport" content="width=device-width initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -19,20 +24,22 @@
     <link rel="stylesheet" type="text/css" href="css/base.css">
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/components.css">
+
 </head>
-<body>
-    <div class="grid-container">
-    <div class="header">
-        <div class="profile-image">
+
+<body class="grid-container">
+
+    <header>
+        <section class="profile-image">
           <img src="image/Main.jpg" alt="Viktor M Jozsa">
-        </div>
-        <div class="section-headline">
+        </section>
+        <section class="section-headline">
           <h1>Viktor M Jozsa</h1>
           <h2>Junior web developer and programmer</h2>
           <br>
           <p><i class="fa fa-map-marker"></i> Cegled, HU</p>
-        </div>
-        <div class="section">
+        </section>
+        <section class="section">
             <p>For a few years, as a secondary activity, I have been dealing with website editing, programming languages and program development, e.g.: html, css, javascript.</p>
             <br>
             <p>I have made up my mind and with professional help I am constantly honing my knowledge and professional experience. It was a very good opportunity at</p>
@@ -42,10 +49,11 @@
             <p>You can view some of my previous works in the other menu items. You can view it on Facebook and Gmail by clicking the links below.</p>
             <br>
             <p>Have a nice day !</p>
-        </div>
-    </div>
-    <div class="main">
-        <div class="student-countainer">
+        </section>
+    </header>
+
+    <main>
+        <section class="student-countainer">
             <h2>~ Student Works</h2>
             <a href="https://viktormihalyjozsa.github.io/git-basics-project/" title="Github - git basics project" target="_blank">
             <span class="student-item">Basics Project</span></a>
@@ -57,9 +65,9 @@
             <span class="student-item">Wedding Website</span></a>
             <a href="https://viktormihalyjozsa.github.io/javascript-color-clock/" title="Github - javascript color clock" target="_blank">
             <span class="student-item">Color Clock ~ JavaScript</span></a>
-        </div>
+        </section>
         <br>
-        <div class="work-countainer">
+        <section class="work-countainer">
             <h2>Junior Student Works ~</h2>
             <a href="https://viktormihalyjozsa.github.io/Blog-Site/" title="Github - Blog Page" target="_blank">
                 <span class="work-item">Blog Page</span></a>
@@ -71,9 +79,9 @@
                 <span class="work-item">Chat Interrface</span></a>
             <a href="https://viktormihalyjozsa.github.io/course-js-minesweeper/" title="Github - course js minesweeper" target="_blank">
                 <span class="student-item">Mines Weeper ~ JS Course</span></a>
-        </div>
+        </section>
         <br>
-        <div class="work-countainer">
+        <section class="work-countainer">
             <h2>Junior my Works ~</h2>
             <a href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - Easter Egg Finder" target="_blank">
                 <span class="work-item">Easter Egg Finder</span></a>
@@ -85,9 +93,10 @@
                 <span class="work-item">Valentine's Day</span></a>
             <a href="https://viktormihalyjozsa.github.io/valentin-s-day-puzzle/" title="Github - Valentine's Day Puzzle" target="_blank">
                 <span class="work-item">Valentine's Day Puzzle</span></a>
-        </div>
-    </div>
-    <div class="footer">
+        </section>
+    </main>
+
+    <footer>
         <ul>
             <li><span class="contact">Contact :</span></li>
             <li><a href="https://www.facebook.com/viktor.jozsa.50/" title="Facebook" class="social-icon" target="_blank">
@@ -95,7 +104,8 @@
             <li><a href="mailto:viktor.mihaly.jozsa@gmail.com" title="Google" class="social-icon" target="_blank">
                 <i class="fa fa-2x fa-google" aria-hidden="true"></i></a></li>
         </ul>
-    </div> 
-    </div>
+    </footer> 
+
 </body>
+
 </html>
