Code Berry School - goodbye with a heavy heart...

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p>For a few years, as a secondary activity, I have been dealing with website editing, programming languages and program development, e.g.: html, css, javascript.</p>
             <br>
             <p>I have made up my mind and with professional help I am constantly honing my knowledge and professional experience. It was a very good opportunity at</p>
-                <a href="https://hu.codeberryschool.com/?referral_code=3GD4HJ" title="Code Berry School - Referral discount" target="_blank">
+                <a href="https://hu.codeberryschool.com/" title="Code Berry School" target="_blank">
                     <span>Code Berry School.</span></a>
             <br><br>
             <p>You can view some of my previous works in the other menu items. You can view it on Facebook and Gmail by clicking the links below.</p>
