--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
         <section class="section-headline">
           <h1>Viktor M Jozsa</h1>
-          <h2>Junior web developer and programmer</h2>
+          <h2>Junior front end developer programmer</h2>
           <br>
           <p><i class="fa fa-map-marker"></i> Cegled, HU</p>
         </section>
