--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                 <span class="work-item">Easter Egg Finder</span></a>
             <a href="https://viktormihalyjozsa.com" title="Viktor M Jozsa" target="_blank">
                 <span class="work-item">V M J</span></a>
-            <a href="https://viktormihalyjozsa.github.io/main-wedding-website/" title="Github - Main Wedding Website" target="_blank">
-                <span class="work-item">Main Wedding Website</span></a>
+            <a href="https://viktormihalyjozsa.github.io/main-wedding-website/" title="Github - My Wedding Website" target="_blank">
+                <span class="work-item">My Wedding Website</span></a>
             <a href="https://viktormihalyjozsa.github.io/valentin-s-day-heart-finder/" title="Github - Valentine's Day Heart Finder" target="_blank">
                 <span class="work-item">Valentine's Day</span></a>
             <a href="https://viktormihalyjozsa.github.io/valentin-s-day-puzzle/" title="Github - Valentine's Day Puzzle" target="_blank">
