--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         <br>
         <section class="work-countainer">
             <h2>Junior my Works ~</h2>
-            <a href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - Easter Egg Finder" target="_blank">
-                <span class="work-item">Easter Egg Finder</span></a>
+            <a href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - Easter Holiday's" target="_blank">
+                <span class="work-item">Easter Holiday's</span></a>
             <a href="https://viktormihalyjozsa.com" title="Viktor M Jozsa" target="_blank">
                 <span class="work-item">V M J</span></a>
             <a href="https://viktormihalyjozsa.github.io/main-wedding-website/" title="Github - My Wedding Website" target="_blank">
