Responsive Website Desing Refresh

--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
             <a href="https://viktormihalyjozsa.github.io/javascript-color-clock/" title="Github - javascript color clock" target="_blank">
             <span class="student-item">Color Clock ~ JavaScript</span></a>
         </section>
-        <br>
         <section class="work-countainer">
             <h2>Junior Student Works ~</h2>
             <a href="https://viktormihalyjozsa.github.io/Blog-Site/" title="Github - Blog Page" target="_blank">
@@ -80,7 +79,6 @@
             <a href="https://viktormihalyjozsa.github.io/course-js-minesweeper/" title="Github - course js minesweeper" target="_blank">
                 <span class="student-item">Mines Weeper ~ JS Course</span></a>
         </section>
-        <br>
         <section class="work-countainer">
             <h2>Junior my Works ~</h2>
             <a href="https://viktormihalyjozsa.github.io/easter-egg-finder/" title="Github - Easter Holiday's" target="_blank">
@@ -97,13 +95,15 @@
     </main>
 
     <footer>
-        <ul>
-            <li><span class="contact">Contact :</span></li>
-            <li><a href="https://www.facebook.com/viktor.jozsa.50/" title="Facebook" class="social-icon" target="_blank">
-                <i class="fa fa-2x fa-facebook" aria-hidden="true"></i></a></li>
-            <li><a href="mailto:viktor.mihaly.jozsa@gmail.com" title="Google" class="social-icon" target="_blank">
-                <i class="fa fa-2x fa-google" aria-hidden="true"></i></a></li>
-        </ul>
+        <section class="footer">
+            <ul>
+                <li><span class="contact">Contact :</span></li>
+                <li><a href="https://www.facebook.com/viktor.jozsa.50/" title="Facebook" class="social-icon" target="_blank">
+                    <i class="fa fa-2x fa-facebook" aria-hidden="true"></i></a></li>
+                <li><a href="mailto:viktor.mihaly.jozsa@gmail.com" title="Google" class="social-icon" target="_blank">
+                    <i class="fa fa-2x fa-google" aria-hidden="true"></i></a></li>
+            </ul>
+        </section>
     </footer> 
 
 </body>
