--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
     <meta name="viewport" content="width=device-width initial-scale=1">
 
+    <meta name='description' content='Viktor M Jozsa, Junior front end developer, programmer'>
+    <meta name='keywords' content='Viktor M Jozsa, Junior front end developer, programmer'>
+
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,16 +33,16 @@
 <body class="grid-container">
 
     <header>
-        <section class="profile-image">
-          <img src="image/Main.jpg" alt="Viktor M Jozsa">
-        </section>
+        <div class="profile-image">
+            <img src="image/Main.jpg" alt="Viktor M Jozsa">
+        </div>
         <section class="section-headline">
-          <h1>Viktor M Jozsa</h1>
-          <h2>Junior front end developer programmer</h2>
-          <br>
-          <p><i class="fa fa-map-marker"></i> Cegled, HU</p>
+            <h1>Viktor M Jozsa</h1>
+            <h2>Junior front end developer programmer</h2>
+            <br>
+            <p><i class="fa fa-map-marker"></i> Cegled, HU</p>
         </section>
-        <section class="section">
+        <div class="section">
             <p>For a few years, as a secondary activity, I have been dealing with website editing, programming languages and program development, e.g.: html, css, javascript.</p>
             <br>
             <p>I have made up my mind and with professional help I am constantly honing my knowledge and professional experience. It was a very good opportunity at</p>
@@ -49,22 +52,22 @@
             <p>You can view some of my previous works in the other menu items. You can view it on Facebook and Gmail by clicking the links below.</p>
             <br>
             <p>Have a nice day !</p>
-        </section>
+                </div>
     </header>
 
     <main>
         <section class="student-countainer">
             <h2>~ Student Works</h2>
             <a href="https://viktormihalyjozsa.github.io/git-basics-project/" title="Github - git basics project" target="_blank">
-            <span class="student-item">Basics Project</span></a>
+                <span class="student-item">Basics Project</span></a>
             <a href="https://viktormihalyjozsa.github.io/responsive-blog-site/" title="Github - responsive blog site" target="_blank">
-            <span class="student-item">Responsive Blog Site</span></a>
+                <span class="student-item">Responsive Blog Site</span></a>
             <a href="https://viktormihalyjozsa.github.io/online-name-card/" title="Github - website layout" target="_blank">
-            <span class="student-item">Online Name Card</span></a>
+                <span class="student-item">Online Name Card</span></a>
             <a href="https://viktormihalyjozsa.github.io/wedding-website/" title="Github - wedding website" target="_blank">
-            <span class="student-item">Wedding Website</span></a>
+                <span class="student-item">Wedding Website</span></a>
             <a href="https://viktormihalyjozsa.github.io/javascript-color-clock/" title="Github - javascript color clock" target="_blank">
-            <span class="student-item">Color Clock ~ JavaScript</span></a>
+                <span class="student-item">Color Clock ~ JavaScript</span></a>
         </section>
         <section class="work-countainer">
             <h2>Junior Student Works ~</h2>
@@ -95,7 +98,7 @@
     </main>
 
     <footer>
-        <section class="footer">
+        <div class="footer">
             <ul>
                 <li><span class="contact">Contact :</span></li>
                 <li><a href="https://www.facebook.com/viktor.jozsa.50/" title="Facebook" class="social-icon" target="_blank">
@@ -103,7 +106,7 @@
                 <li><a href="mailto:viktor.mihaly.jozsa@gmail.com" title="Google" class="social-icon" target="_blank">
                     <i class="fa fa-2x fa-google" aria-hidden="true"></i></a></li>
             </ul>
-        </section>
+        </div>
     </footer> 
 
 </body>
