--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
 
     <meta name='description' content='Viktor M Jozsa, Junior front end developer, programmer'>
-    <meta name='keywords' content='Viktor M Jozsa, Junior front end developer, programmer'>
+    <meta name='keywords' content='Viktor M Jozsa, Viktor M Józsa, Józsa Viktor, Viktor Józsa, Junior front end developer, programmer'>
 
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
