--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <br><br>
             <p>You can view some of my previous works in the other menu items. You can view it on Facebook and Gmail by clicking the links below.</p>
             <br>
-            <p>Have a nice day !</p>
+            <h3>Have a nice day !</h3>
                 </div>
     </header>
 
