--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
                 <span class="work-item">Valentine's Day</span></a>
             <a href="https://viktormihalyjozsa.github.io/valentin-s-day-puzzle/" title="Github - Valentine's Day Puzzle" target="_blank">
                 <span class="work-item">Valentine's Day Puzzle</span></a>
+            <a href="https://judiths.kitchen/" title="Github - Judith's Kitchen" target="_blank">
+                <span class="work-item">Judith's Kitchen</span></a>
         </section>
     </main>
 
