--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="footer">
             <ul>
                 <li><span class="contact">Contact :</span></li>
-                <li><a href="https://www.facebook.com/viktor.jozsa.50/" title="Facebook" class="social-icon" target="_blank">
+                <li><a href="https://www.facebook.com/viktor.m.jozsa/" title="Facebook" class="social-icon" target="_blank">
                     <i class="fa fa-2x fa-facebook" aria-hidden="true"></i></a></li>
                 <li><a href="mailto:viktor.mihaly.jozsa@gmail.com" title="Google" class="social-icon" target="_blank">
                     <i class="fa fa-2x fa-google" aria-hidden="true"></i></a></li>
