--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <a href="https://judiths.kitchen/" title="Github - Judith's Kitchen" target="_blank">
                 <span class="work-item">Judith's Kitchen</span></a>
             <a href="https://viktormihalyjozsa.github.io/colorful-javascript-basic-calculator/" title="Github - Colorful JavaScript Basic Calculator" target="_blank">
-                <span class="work-item">Colorful JavaScript Basic Calculator</span></a>
+                <span class="work-item">Colorful Calculator</span></a>
         </section>
     </main>
 
