--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <section class="section-headline">
             <h1>Viktor M Jozsa</h1>
-            <h2>Junior front end developer programmer</h2>
+            <h2>Web developer ~ Junior frontend programmer</h2>
             <br>
             <p><i class="fa fa-map-marker"></i> Cegled, HU</p>
         </section>
